# Sudanese-Mobius-Strip-Mean-and-Gaussian-Curvature-in-R-3

./: .gitattributes  README.md  pyproject.toml  requirements.txt  setup.py  sudanese_mobius_curvature.py
myenv/: pyvenv.cfg
scripts/: generate_figure.py
src/sudanese_mobius/: S3_parameterization.py  curvature.py  parameters.py  stereo_projection.py  visualization.py
src/sudanese_mobius.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
